parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    PCHL
    SPHL
    XTHL
    PUSH
    POP

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement statements
Rule 2     statements -> statement
Rule 3     statement -> MOV register COMMA register
Rule 4     statement -> MOV register COMMA memory
Rule 5     statement -> MOV memory COMMA register
Rule 6     statement -> LABEL COLON MOV register COMMA register
Rule 7     statement -> LABEL COLON MOV register COMMA memory
Rule 8     statement -> LABEL COLON MOV memory COMMA register
Rule 9     statement -> MVI register COMMA byte_8
Rule 10    statement -> MVI memory COMMA byte_8
Rule 11    statement -> LABEL COLON MVI register COMMA byte_8
Rule 12    statement -> LABEL COLON MVI memory COMMA byte_8
Rule 13    statement -> LXI register_pair_3 COMMA byte_16
Rule 14    statement -> LABEL COLON LXI register_pair_3 COMMA byte_16
Rule 15    statement -> LDAX register_pair_2
Rule 16    statement -> LABEL COLON LDAX register_pair_2
Rule 17    statement -> STAX register_pair_2
Rule 18    statement -> LABEL COLON STAX register_pair_2
Rule 19    statement -> LDA byte_16
Rule 20    statement -> LABEL COLON LDA byte_16
Rule 21    statement -> STA byte_16
Rule 22    statement -> LABEL COLON STA byte_16
Rule 23    statement -> LHLD byte_16
Rule 24    statement -> LABEL COLON LHLD byte_16
Rule 25    statement -> SHLD byte_16
Rule 26    statement -> LABEL COLON SHLD byte_16
Rule 27    statement -> XCHG
Rule 28    statement -> LABEL COLON XCHG
Rule 29    statement -> ADD register
Rule 30    statement -> ADD memory
Rule 31    statement -> LABEL COLON ADD register
Rule 32    statement -> LABEL COLON ADD memory
Rule 33    statement -> ADI byte_8
Rule 34    statement -> LABEL COLON ADI byte_8
Rule 35    statement -> ADC register
Rule 36    statement -> ADC memory
Rule 37    statement -> LABEL COLON ADC register
Rule 38    statement -> LABEL COLON ADC memory
Rule 39    statement -> ACI byte_8
Rule 40    statement -> LABEL COLON ACI byte_8
Rule 41    statement -> SUB register
Rule 42    statement -> SUB memory
Rule 43    statement -> LABEL COLON SUB register
Rule 44    statement -> LABEL COLON SUB memory
Rule 45    statement -> SUI byte_8
Rule 46    statement -> LABEL COLON SUI byte_8
Rule 47    statement -> SBB register
Rule 48    statement -> SBB memory
Rule 49    statement -> LABEL COLON SBB register
Rule 50    statement -> LABEL COLON SBB memory
Rule 51    statement -> SBI byte_8
Rule 52    statement -> LABEL COLON SBI byte_8
Rule 53    statement -> INR register
Rule 54    statement -> INR memory
Rule 55    statement -> LABEL COLON INR register
Rule 56    statement -> LABEL COLON INR memory
Rule 57    statement -> DCR register
Rule 58    statement -> DCR memory
Rule 59    statement -> LABEL COLON DCR register
Rule 60    statement -> LABEL COLON DCR memory
Rule 61    statement -> INX register_pair_3
Rule 62    statement -> LABEL COLON INX register_pair_3
Rule 63    statement -> DCX register_pair_3
Rule 64    statement -> LABEL COLON DCX register_pair_3
Rule 65    statement -> DAD register_pair_3
Rule 66    statement -> LABEL COLON DAD register_pair_3
Rule 67    statement -> ANA register
Rule 68    statement -> ANA memory
Rule 69    statement -> LABEL COLON ANA register
Rule 70    statement -> LABEL COLON ANA memory
Rule 71    statement -> ORA register
Rule 72    statement -> ORA memory
Rule 73    statement -> LABEL COLON ORA register
Rule 74    statement -> LABEL COLON ORA memory
Rule 75    statement -> XRA register
Rule 76    statement -> XRA memory
Rule 77    statement -> LABEL COLON XRA register
Rule 78    statement -> LABEL COLON XRA memory
Rule 79    statement -> ANI byte_8
Rule 80    statement -> LABEL COLON ANI byte_8
Rule 81    statement -> ORI byte_8
Rule 82    statement -> LABEL COLON ORI byte_8
Rule 83    statement -> XRI byte_8
Rule 84    statement -> LABEL COLON XRI byte_8
Rule 85    statement -> CMA
Rule 86    statement -> LABEL COLON CMA
Rule 87    statement -> RLC
Rule 88    statement -> LABEL COLON RLC
Rule 89    statement -> RAL
Rule 90    statement -> LABEL COLON RAL
Rule 91    statement -> RRC
Rule 92    statement -> LABEL COLON RRC
Rule 93    statement -> RAR
Rule 94    statement -> LABEL COLON RAR
Rule 95    statement -> CMP register
Rule 96    statement -> CMP memory
Rule 97    statement -> LABEL COLON CMP register
Rule 98    statement -> LABEL COLON CMP memory
Rule 99    statement -> CPI byte_8
Rule 100   statement -> LABEL COLON CPI byte_8
Rule 101   statement -> CMC
Rule 102   statement -> LABEL COLON CMC
Rule 103   statement -> STC
Rule 104   statement -> LABEL COLON STC
Rule 105   statement -> DAA
Rule 106   statement -> LABEL COLON DAA
Rule 107   statement -> JMP byte_16
Rule 108   statement -> JMP LABEL
Rule 109   statement -> LABEL COLON JMP byte_16
Rule 110   statement -> LABEL COLON JMP LABEL
Rule 111   statement -> JC byte_16
Rule 112   statement -> JC LABEL
Rule 113   statement -> LABEL COLON JC byte_16
Rule 114   statement -> LABEL COLON JC LABEL
Rule 115   statement -> JNC byte_16
Rule 116   statement -> JNC LABEL
Rule 117   statement -> LABEL COLON JNC byte_16
Rule 118   statement -> LABEL COLON JNC LABEL
Rule 119   statement -> JZ byte_16
Rule 120   statement -> JZ LABEL
Rule 121   statement -> LABEL COLON JZ byte_16
Rule 122   statement -> LABEL COLON JZ LABEL
Rule 123   statement -> JNZ byte_16
Rule 124   statement -> JNZ LABEL
Rule 125   statement -> LABEL COLON JNZ byte_16
Rule 126   statement -> LABEL COLON JNZ LABEL
Rule 127   statement -> JP byte_16
Rule 128   statement -> JP LABEL
Rule 129   statement -> LABEL COLON JP byte_16
Rule 130   statement -> LABEL COLON JP LABEL
Rule 131   statement -> JM byte_16
Rule 132   statement -> JM LABEL
Rule 133   statement -> LABEL COLON JM byte_16
Rule 134   statement -> LABEL COLON JM LABEL
Rule 135   statement -> JPE byte_16
Rule 136   statement -> JPE LABEL
Rule 137   statement -> LABEL COLON JPE byte_16
Rule 138   statement -> LABEL COLON JPE LABEL
Rule 139   statement -> JPO byte_16
Rule 140   statement -> JPO LABEL
Rule 141   statement -> LABEL COLON JPO byte_16
Rule 142   statement -> LABEL COLON JPO LABEL
Rule 143   statement -> CALL byte_16
Rule 144   statement -> CALL LABEL
Rule 145   statement -> LABEL COLON CALL byte_16
Rule 146   statement -> LABEL COLON CALL LABEL
Rule 147   statement -> RET
Rule 148   statement -> LABEL COLON RET
Rule 149   statement -> MACHINE
Rule 150   statement -> LABEL COLON MACHINE
Rule 151   register -> A
Rule 152   register -> B
Rule 153   register -> C
Rule 154   register -> D
Rule 155   register -> E
Rule 156   register -> H
Rule 157   register -> L
Rule 158   memory -> M
Rule 159   register_pair_2 -> B
Rule 160   register_pair_2 -> D
Rule 161   register_pair_3 -> B
Rule 162   register_pair_3 -> D
Rule 163   register_pair_3 -> H
Rule 164   byte_8 -> DIGIT DIGIT
Rule 165   byte_8 -> hex DIGIT
Rule 166   byte_8 -> DIGIT hex
Rule 167   byte_16 -> DIGIT DIGIT DIGIT DIGIT
Rule 168   byte_16 -> hex DIGIT DIGIT DIGIT
Rule 169   byte_16 -> DIGIT hex DIGIT DIGIT
Rule 170   byte_16 -> DIGIT DIGIT hex DIGIT
Rule 171   byte_16 -> DIGIT DIGIT DIGIT hex
Rule 172   hex -> A
Rule 173   hex -> B
Rule 174   hex -> C
Rule 175   hex -> D
Rule 176   hex -> E
Rule 177   hex -> F

Terminals, with rules where they appear

A                    : 151 172
ACI                  : 39 40
ADC                  : 35 36 37 38
ADD                  : 29 30 31 32
ADI                  : 33 34
ANA                  : 67 68 69 70
ANI                  : 79 80
B                    : 152 159 161 173
C                    : 153 174
CALL                 : 143 144 145 146
CMA                  : 85 86
CMC                  : 101 102
CMP                  : 95 96 97 98
COLON                : 6 7 8 11 12 14 16 18 20 22 24 26 28 31 32 34 37 38 40 43 44 46 49 50 52 55 56 59 60 62 64 66 69 70 73 74 77 78 80 82 84 86 88 90 92 94 97 98 100 102 104 106 109 110 113 114 117 118 121 122 125 126 129 130 133 134 137 138 141 142 145 146 148 150
COMMA                : 3 4 5 6 7 8 9 10 11 12 13 14
CPI                  : 99 100
D                    : 154 160 162 175
DAA                  : 105 106
DAD                  : 65 66
DCR                  : 57 58 59 60
DCX                  : 63 64
DIGIT                : 164 164 165 166 167 167 167 167 168 168 168 169 169 169 170 170 170 171 171 171
E                    : 155 176
F                    : 177
H                    : 156 163
INR                  : 53 54 55 56
INX                  : 61 62
JC                   : 111 112 113 114
JM                   : 131 132 133 134
JMP                  : 107 108 109 110
JNC                  : 115 116 117 118
JNZ                  : 123 124 125 126
JP                   : 127 128 129 130
JPE                  : 135 136 137 138
JPO                  : 139 140 141 142
JZ                   : 119 120 121 122
L                    : 157
LABEL                : 6 7 8 11 12 14 16 18 20 22 24 26 28 31 32 34 37 38 40 43 44 46 49 50 52 55 56 59 60 62 64 66 69 70 73 74 77 78 80 82 84 86 88 90 92 94 97 98 100 102 104 106 108 109 110 110 112 113 114 114 116 117 118 118 120 121 122 122 124 125 126 126 128 129 130 130 132 133 134 134 136 137 138 138 140 141 142 142 144 145 146 146 148 150
LDA                  : 19 20
LDAX                 : 15 16
LHLD                 : 23 24
LXI                  : 13 14
M                    : 158
MACHINE              : 149 150
MOV                  : 3 4 5 6 7 8
MVI                  : 9 10 11 12
ORA                  : 71 72 73 74
ORI                  : 81 82
PCHL                 : 
POP                  : 
PUSH                 : 
RAL                  : 89 90
RAR                  : 93 94
RET                  : 147 148
RLC                  : 87 88
RRC                  : 91 92
SBB                  : 47 48 49 50
SBI                  : 51 52
SHLD                 : 25 26
SPHL                 : 
STA                  : 21 22
STAX                 : 17 18
STC                  : 103 104
SUB                  : 41 42 43 44
SUI                  : 45 46
XCHG                 : 27 28
XRA                  : 75 76 77 78
XRI                  : 83 84
XTHL                 : 
error                : 

Nonterminals, with rules where they appear

byte_16              : 13 14 19 20 21 22 23 24 25 26 107 109 111 113 115 117 119 121 123 125 127 129 131 133 135 137 139 141 143 145
byte_8               : 9 10 11 12 33 34 39 40 45 46 51 52 79 80 81 82 83 84 99 100
hex                  : 165 166 168 169 170 171
memory               : 4 5 7 8 10 12 30 32 36 38 42 44 48 50 54 56 58 60 68 70 72 74 76 78 96 98
register             : 3 3 4 5 6 6 7 8 9 11 29 31 35 37 41 43 47 49 53 55 57 59 67 69 71 73 75 77 95 97
register_pair_2      : 15 16 17 18
register_pair_3      : 13 14 61 62 63 64 65 66
statement            : 1 2
statements           : 1 0

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement statements
    (2) statements -> . statement
    (3) statement -> . MOV register COMMA register
    (4) statement -> . MOV register COMMA memory
    (5) statement -> . MOV memory COMMA register
    (6) statement -> . LABEL COLON MOV register COMMA register
    (7) statement -> . LABEL COLON MOV register COMMA memory
    (8) statement -> . LABEL COLON MOV memory COMMA register
    (9) statement -> . MVI register COMMA byte_8
    (10) statement -> . MVI memory COMMA byte_8
    (11) statement -> . LABEL COLON MVI register COMMA byte_8
    (12) statement -> . LABEL COLON MVI memory COMMA byte_8
    (13) statement -> . LXI register_pair_3 COMMA byte_16
    (14) statement -> . LABEL COLON LXI register_pair_3 COMMA byte_16
    (15) statement -> . LDAX register_pair_2
    (16) statement -> . LABEL COLON LDAX register_pair_2
    (17) statement -> . STAX register_pair_2
    (18) statement -> . LABEL COLON STAX register_pair_2
    (19) statement -> . LDA byte_16
    (20) statement -> . LABEL COLON LDA byte_16
    (21) statement -> . STA byte_16
    (22) statement -> . LABEL COLON STA byte_16
    (23) statement -> . LHLD byte_16
    (24) statement -> . LABEL COLON LHLD byte_16
    (25) statement -> . SHLD byte_16
    (26) statement -> . LABEL COLON SHLD byte_16
    (27) statement -> . XCHG
    (28) statement -> . LABEL COLON XCHG
    (29) statement -> . ADD register
    (30) statement -> . ADD memory
    (31) statement -> . LABEL COLON ADD register
    (32) statement -> . LABEL COLON ADD memory
    (33) statement -> . ADI byte_8
    (34) statement -> . LABEL COLON ADI byte_8
    (35) statement -> . ADC register
    (36) statement -> . ADC memory
    (37) statement -> . LABEL COLON ADC register
    (38) statement -> . LABEL COLON ADC memory
    (39) statement -> . ACI byte_8
    (40) statement -> . LABEL COLON ACI byte_8
    (41) statement -> . SUB register
    (42) statement -> . SUB memory
    (43) statement -> . LABEL COLON SUB register
    (44) statement -> . LABEL COLON SUB memory
    (45) statement -> . SUI byte_8
    (46) statement -> . LABEL COLON SUI byte_8
    (47) statement -> . SBB register
    (48) statement -> . SBB memory
    (49) statement -> . LABEL COLON SBB register
    (50) statement -> . LABEL COLON SBB memory
    (51) statement -> . SBI byte_8
    (52) statement -> . LABEL COLON SBI byte_8
    (53) statement -> . INR register
    (54) statement -> . INR memory
    (55) statement -> . LABEL COLON INR register
    (56) statement -> . LABEL COLON INR memory
    (57) statement -> . DCR register
    (58) statement -> . DCR memory
    (59) statement -> . LABEL COLON DCR register
    (60) statement -> . LABEL COLON DCR memory
    (61) statement -> . INX register_pair_3
    (62) statement -> . LABEL COLON INX register_pair_3
    (63) statement -> . DCX register_pair_3
    (64) statement -> . LABEL COLON DCX register_pair_3
    (65) statement -> . DAD register_pair_3
    (66) statement -> . LABEL COLON DAD register_pair_3
    (67) statement -> . ANA register
    (68) statement -> . ANA memory
    (69) statement -> . LABEL COLON ANA register
    (70) statement -> . LABEL COLON ANA memory
    (71) statement -> . ORA register
    (72) statement -> . ORA memory
    (73) statement -> . LABEL COLON ORA register
    (74) statement -> . LABEL COLON ORA memory
    (75) statement -> . XRA register
    (76) statement -> . XRA memory
    (77) statement -> . LABEL COLON XRA register
    (78) statement -> . LABEL COLON XRA memory
    (79) statement -> . ANI byte_8
    (80) statement -> . LABEL COLON ANI byte_8
    (81) statement -> . ORI byte_8
    (82) statement -> . LABEL COLON ORI byte_8
    (83) statement -> . XRI byte_8
    (84) statement -> . LABEL COLON XRI byte_8
    (85) statement -> . CMA
    (86) statement -> . LABEL COLON CMA
    (87) statement -> . RLC
    (88) statement -> . LABEL COLON RLC
    (89) statement -> . RAL
    (90) statement -> . LABEL COLON RAL
    (91) statement -> . RRC
    (92) statement -> . LABEL COLON RRC
    (93) statement -> . RAR
    (94) statement -> . LABEL COLON RAR
    (95) statement -> . CMP register
    (96) statement -> . CMP memory
    (97) statement -> . LABEL COLON CMP register
    (98) statement -> . LABEL COLON CMP memory
    (99) statement -> . CPI byte_8
    (100) statement -> . LABEL COLON CPI byte_8
    (101) statement -> . CMC
    (102) statement -> . LABEL COLON CMC
    (103) statement -> . STC
    (104) statement -> . LABEL COLON STC
    (105) statement -> . DAA
    (106) statement -> . LABEL COLON DAA
    (107) statement -> . JMP byte_16
    (108) statement -> . JMP LABEL
    (109) statement -> . LABEL COLON JMP byte_16
    (110) statement -> . LABEL COLON JMP LABEL
    (111) statement -> . JC byte_16
    (112) statement -> . JC LABEL
    (113) statement -> . LABEL COLON JC byte_16
    (114) statement -> . LABEL COLON JC LABEL
    (115) statement -> . JNC byte_16
    (116) statement -> . JNC LABEL
    (117) statement -> . LABEL COLON JNC byte_16
    (118) statement -> . LABEL COLON JNC LABEL
    (119) statement -> . JZ byte_16
    (120) statement -> . JZ LABEL
    (121) statement -> . LABEL COLON JZ byte_16
    (122) statement -> . LABEL COLON JZ LABEL
    (123) statement -> . JNZ byte_16
    (124) statement -> . JNZ LABEL
    (125) statement -> . LABEL COLON JNZ byte_16
    (126) statement -> . LABEL COLON JNZ LABEL
    (127) statement -> . JP byte_16
    (128) statement -> . JP LABEL
    (129) statement -> . LABEL COLON JP byte_16
    (130) statement -> . LABEL COLON JP LABEL
    (131) statement -> . JM byte_16
    (132) statement -> . JM LABEL
    (133) statement -> . LABEL COLON JM byte_16
    (134) statement -> . LABEL COLON JM LABEL
    (135) statement -> . JPE byte_16
    (136) statement -> . JPE LABEL
    (137) statement -> . LABEL COLON JPE byte_16
    (138) statement -> . LABEL COLON JPE LABEL
    (139) statement -> . JPO byte_16
    (140) statement -> . JPO LABEL
    (141) statement -> . LABEL COLON JPO byte_16
    (142) statement -> . LABEL COLON JPO LABEL
    (143) statement -> . CALL byte_16
    (144) statement -> . CALL LABEL
    (145) statement -> . LABEL COLON CALL byte_16
    (146) statement -> . LABEL COLON CALL LABEL
    (147) statement -> . RET
    (148) statement -> . LABEL COLON RET
    (149) statement -> . MACHINE
    (150) statement -> . LABEL COLON MACHINE

    MOV             shift and go to state 3
    LABEL           shift and go to state 4
    MVI             shift and go to state 5
    LXI             shift and go to state 6
    LDAX            shift and go to state 7
    STAX            shift and go to state 8
    LDA             shift and go to state 9
    STA             shift and go to state 10
    LHLD            shift and go to state 11
    SHLD            shift and go to state 12
    XCHG            shift and go to state 13
    ADD             shift and go to state 14
    ADI             shift and go to state 15
    ADC             shift and go to state 16
    ACI             shift and go to state 17
    SUB             shift and go to state 18
    SUI             shift and go to state 19
    SBB             shift and go to state 20
    SBI             shift and go to state 21
    INR             shift and go to state 22
    DCR             shift and go to state 23
    INX             shift and go to state 24
    DCX             shift and go to state 25
    DAD             shift and go to state 26
    ANA             shift and go to state 27
    ORA             shift and go to state 28
    XRA             shift and go to state 29
    ANI             shift and go to state 30
    ORI             shift and go to state 31
    XRI             shift and go to state 32
    CMA             shift and go to state 33
    RLC             shift and go to state 34
    RAL             shift and go to state 35
    RRC             shift and go to state 36
    RAR             shift and go to state 37
    CMP             shift and go to state 38
    CPI             shift and go to state 39
    CMC             shift and go to state 40
    STC             shift and go to state 41
    DAA             shift and go to state 42
    JMP             shift and go to state 43
    JC              shift and go to state 44
    JNC             shift and go to state 45
    JZ              shift and go to state 46
    JNZ             shift and go to state 47
    JP              shift and go to state 48
    JM              shift and go to state 49
    JPE             shift and go to state 50
    JPO             shift and go to state 51
    CALL            shift and go to state 52
    RET             shift and go to state 53
    MACHINE         shift and go to state 54

    statements                     shift and go to state 1
    statement                      shift and go to state 2

state 1

    (0) S' -> statements .



state 2

    (1) statements -> statement . statements
    (2) statements -> statement .
    (1) statements -> . statement statements
    (2) statements -> . statement
    (3) statement -> . MOV register COMMA register
    (4) statement -> . MOV register COMMA memory
    (5) statement -> . MOV memory COMMA register
    (6) statement -> . LABEL COLON MOV register COMMA register
    (7) statement -> . LABEL COLON MOV register COMMA memory
    (8) statement -> . LABEL COLON MOV memory COMMA register
    (9) statement -> . MVI register COMMA byte_8
    (10) statement -> . MVI memory COMMA byte_8
    (11) statement -> . LABEL COLON MVI register COMMA byte_8
    (12) statement -> . LABEL COLON MVI memory COMMA byte_8
    (13) statement -> . LXI register_pair_3 COMMA byte_16
    (14) statement -> . LABEL COLON LXI register_pair_3 COMMA byte_16
    (15) statement -> . LDAX register_pair_2
    (16) statement -> . LABEL COLON LDAX register_pair_2
    (17) statement -> . STAX register_pair_2
    (18) statement -> . LABEL COLON STAX register_pair_2
    (19) statement -> . LDA byte_16
    (20) statement -> . LABEL COLON LDA byte_16
    (21) statement -> . STA byte_16
    (22) statement -> . LABEL COLON STA byte_16
    (23) statement -> . LHLD byte_16
    (24) statement -> . LABEL COLON LHLD byte_16
    (25) statement -> . SHLD byte_16
    (26) statement -> . LABEL COLON SHLD byte_16
    (27) statement -> . XCHG
    (28) statement -> . LABEL COLON XCHG
    (29) statement -> . ADD register
    (30) statement -> . ADD memory
    (31) statement -> . LABEL COLON ADD register
    (32) statement -> . LABEL COLON ADD memory
    (33) statement -> . ADI byte_8
    (34) statement -> . LABEL COLON ADI byte_8
    (35) statement -> . ADC register
    (36) statement -> . ADC memory
    (37) statement -> . LABEL COLON ADC register
    (38) statement -> . LABEL COLON ADC memory
    (39) statement -> . ACI byte_8
    (40) statement -> . LABEL COLON ACI byte_8
    (41) statement -> . SUB register
    (42) statement -> . SUB memory
    (43) statement -> . LABEL COLON SUB register
    (44) statement -> . LABEL COLON SUB memory
    (45) statement -> . SUI byte_8
    (46) statement -> . LABEL COLON SUI byte_8
    (47) statement -> . SBB register
    (48) statement -> . SBB memory
    (49) statement -> . LABEL COLON SBB register
    (50) statement -> . LABEL COLON SBB memory
    (51) statement -> . SBI byte_8
    (52) statement -> . LABEL COLON SBI byte_8
    (53) statement -> . INR register
    (54) statement -> . INR memory
    (55) statement -> . LABEL COLON INR register
    (56) statement -> . LABEL COLON INR memory
    (57) statement -> . DCR register
    (58) statement -> . DCR memory
    (59) statement -> . LABEL COLON DCR register
    (60) statement -> . LABEL COLON DCR memory
    (61) statement -> . INX register_pair_3
    (62) statement -> . LABEL COLON INX register_pair_3
    (63) statement -> . DCX register_pair_3
    (64) statement -> . LABEL COLON DCX register_pair_3
    (65) statement -> . DAD register_pair_3
    (66) statement -> . LABEL COLON DAD register_pair_3
    (67) statement -> . ANA register
    (68) statement -> . ANA memory
    (69) statement -> . LABEL COLON ANA register
    (70) statement -> . LABEL COLON ANA memory
    (71) statement -> . ORA register
    (72) statement -> . ORA memory
    (73) statement -> . LABEL COLON ORA register
    (74) statement -> . LABEL COLON ORA memory
    (75) statement -> . XRA register
    (76) statement -> . XRA memory
    (77) statement -> . LABEL COLON XRA register
    (78) statement -> . LABEL COLON XRA memory
    (79) statement -> . ANI byte_8
    (80) statement -> . LABEL COLON ANI byte_8
    (81) statement -> . ORI byte_8
    (82) statement -> . LABEL COLON ORI byte_8
    (83) statement -> . XRI byte_8
    (84) statement -> . LABEL COLON XRI byte_8
    (85) statement -> . CMA
    (86) statement -> . LABEL COLON CMA
    (87) statement -> . RLC
    (88) statement -> . LABEL COLON RLC
    (89) statement -> . RAL
    (90) statement -> . LABEL COLON RAL
    (91) statement -> . RRC
    (92) statement -> . LABEL COLON RRC
    (93) statement -> . RAR
    (94) statement -> . LABEL COLON RAR
    (95) statement -> . CMP register
    (96) statement -> . CMP memory
    (97) statement -> . LABEL COLON CMP register
    (98) statement -> . LABEL COLON CMP memory
    (99) statement -> . CPI byte_8
    (100) statement -> . LABEL COLON CPI byte_8
    (101) statement -> . CMC
    (102) statement -> . LABEL COLON CMC
    (103) statement -> . STC
    (104) statement -> . LABEL COLON STC
    (105) statement -> . DAA
    (106) statement -> . LABEL COLON DAA
    (107) statement -> . JMP byte_16
    (108) statement -> . JMP LABEL
    (109) statement -> . LABEL COLON JMP byte_16
    (110) statement -> . LABEL COLON JMP LABEL
    (111) statement -> . JC byte_16
    (112) statement -> . JC LABEL
    (113) statement -> . LABEL COLON JC byte_16
    (114) statement -> . LABEL COLON JC LABEL
    (115) statement -> . JNC byte_16
    (116) statement -> . JNC LABEL
    (117) statement -> . LABEL COLON JNC byte_16
    (118) statement -> . LABEL COLON JNC LABEL
    (119) statement -> . JZ byte_16
    (120) statement -> . JZ LABEL
    (121) statement -> . LABEL COLON JZ byte_16
    (122) statement -> . LABEL COLON JZ LABEL
    (123) statement -> . JNZ byte_16
    (124) statement -> . JNZ LABEL
    (125) statement -> . LABEL COLON JNZ byte_16
    (126) statement -> . LABEL COLON JNZ LABEL
    (127) statement -> . JP byte_16
    (128) statement -> . JP LABEL
    (129) statement -> . LABEL COLON JP byte_16
    (130) statement -> . LABEL COLON JP LABEL
    (131) statement -> . JM byte_16
    (132) statement -> . JM LABEL
    (133) statement -> . LABEL COLON JM byte_16
    (134) statement -> . LABEL COLON JM LABEL
    (135) statement -> . JPE byte_16
    (136) statement -> . JPE LABEL
    (137) statement -> . LABEL COLON JPE byte_16
    (138) statement -> . LABEL COLON JPE LABEL
    (139) statement -> . JPO byte_16
    (140) statement -> . JPO LABEL
    (141) statement -> . LABEL COLON JPO byte_16
    (142) statement -> . LABEL COLON JPO LABEL
    (143) statement -> . CALL byte_16
    (144) statement -> . CALL LABEL
    (145) statement -> . LABEL COLON CALL byte_16
    (146) statement -> . LABEL COLON CALL LABEL
    (147) statement -> . RET
    (148) statement -> . LABEL COLON RET
    (149) statement -> . MACHINE
    (150) statement -> . LABEL COLON MACHINE

    $end            reduce using rule 2 (statements -> statement .)
    MOV             shift and go to state 3
    LABEL           shift and go to state 4
    MVI             shift and go to state 5
    LXI             shift and go to state 6
    LDAX            shift and go to state 7
    STAX            shift and go to state 8
    LDA             shift and go to state 9
    STA             shift and go to state 10
    LHLD            shift and go to state 11
    SHLD            shift and go to state 12
    XCHG            shift and go to state 13
    ADD             shift and go to state 14
    ADI             shift and go to state 15
    ADC             shift and go to state 16
    ACI             shift and go to state 17
    SUB             shift and go to state 18
    SUI             shift and go to state 19
    SBB             shift and go to state 20
    SBI             shift and go to state 21
    INR             shift and go to state 22
    DCR             shift and go to state 23
    INX             shift and go to state 24
    DCX             shift and go to state 25
    DAD             shift and go to state 26
    ANA             shift and go to state 27
    ORA             shift and go to state 28
    XRA             shift and go to state 29
    ANI             shift and go to state 30
    ORI             shift and go to state 31
    XRI             shift and go to state 32
    CMA             shift and go to state 33
    RLC             shift and go to state 34
    RAL             shift and go to state 35
    RRC             shift and go to state 36
    RAR             shift and go to state 37
    CMP             shift and go to state 38
    CPI             shift and go to state 39
    CMC             shift and go to state 40
    STC             shift and go to state 41
    DAA             shift and go to state 42
    JMP             shift and go to state 43
    JC              shift and go to state 44
    JNC             shift and go to state 45
    JZ              shift and go to state 46
    JNZ             shift and go to state 47
    JP              shift and go to state 48
    JM              shift and go to state 49
    JPE             shift and go to state 50
    JPO             shift and go to state 51
    CALL            shift and go to state 52
    RET             shift and go to state 53
    MACHINE         shift and go to state 54

    statement                      shift and go to state 2
    statements                     shift and go to state 55

state 3

    (3) statement -> MOV . register COMMA register
    (4) statement -> MOV . register COMMA memory
    (5) statement -> MOV . memory COMMA register
    (151) register -> . A
    (152) register -> . B
    (153) register -> . C
    (154) register -> . D
    (155) register -> . E
    (156) register -> . H
    (157) register -> . L
    (158) memory -> . M

    A               shift and go to state 58
    B               shift and go to state 59
    C               shift and go to state 60
    D               shift and go to state 61
    E               shift and go to state 62
    H               shift and go to state 63
    L               shift and go to state 64
    M               shift and go to state 65

    register                       shift and go to state 56
    memory                         shift and go to state 57

state 4

    (6) statement -> LABEL . COLON MOV register COMMA register
    (7) statement -> LABEL . COLON MOV register COMMA memory
    (8) statement -> LABEL . COLON MOV memory COMMA register
    (11) statement -> LABEL . COLON MVI register COMMA byte_8
    (12) statement -> LABEL . COLON MVI memory COMMA byte_8
    (14) statement -> LABEL . COLON LXI register_pair_3 COMMA byte_16
    (16) statement -> LABEL . COLON LDAX register_pair_2
    (18) statement -> LABEL . COLON STAX register_pair_2
    (20) statement -> LABEL . COLON LDA byte_16
    (22) statement -> LABEL . COLON STA byte_16
    (24) statement -> LABEL . COLON LHLD byte_16
    (26) statement -> LABEL . COLON SHLD byte_16
    (28) statement -> LABEL . COLON XCHG
    (31) statement -> LABEL . COLON ADD register
    (32) statement -> LABEL . COLON ADD memory
    (34) statement -> LABEL . COLON ADI byte_8
    (37) statement -> LABEL . COLON ADC register
    (38) statement -> LABEL . COLON ADC memory
    (40) statement -> LABEL . COLON ACI byte_8
    (43) statement -> LABEL . COLON SUB register
    (44) statement -> LABEL . COLON SUB memory
    (46) statement -> LABEL . COLON SUI byte_8
    (49) statement -> LABEL . COLON SBB register
    (50) statement -> LABEL . COLON SBB memory
    (52) statement -> LABEL . COLON SBI byte_8
    (55) statement -> LABEL . COLON INR register
    (56) statement -> LABEL . COLON INR memory
    (59) statement -> LABEL . COLON DCR register
    (60) statement -> LABEL . COLON DCR memory
    (62) statement -> LABEL . COLON INX register_pair_3
    (64) statement -> LABEL . COLON DCX register_pair_3
    (66) statement -> LABEL . COLON DAD register_pair_3
    (69) statement -> LABEL . COLON ANA register
    (70) statement -> LABEL . COLON ANA memory
    (73) statement -> LABEL . COLON ORA register
    (74) statement -> LABEL . COLON ORA memory
    (77) statement -> LABEL . COLON XRA register
    (78) statement -> LABEL . COLON XRA memory
    (80) statement -> LABEL . COLON ANI byte_8
    (82) statement -> LABEL . COLON ORI byte_8
    (84) statement -> LABEL . COLON XRI byte_8
    (86) statement -> LABEL . COLON CMA
    (88) statement -> LABEL . COLON RLC
    (90) statement -> LABEL . COLON RAL
    (92) statement -> LABEL . COLON RRC
    (94) statement -> LABEL . COLON RAR
    (97) statement -> LABEL . COLON CMP register
    (98) statement -> LABEL . COLON CMP memory
    (100) statement -> LABEL . COLON CPI byte_8
    (102) statement -> LABEL . COLON CMC
    (104) statement -> LABEL . COLON STC
    (106) statement -> LABEL . COLON DAA
    (109) statement -> LABEL . COLON JMP byte_16
    (110) statement -> LABEL . COLON JMP LABEL
    (113) statement -> LABEL . COLON JC byte_16
    (114) statement -> LABEL . COLON JC LABEL
    (117) statement -> LABEL . COLON JNC byte_16
    (118) statement -> LABEL . COLON JNC LABEL
    (121) statement -> LABEL . COLON JZ byte_16
    (122) statement -> LABEL . COLON JZ LABEL
    (125) statement -> LABEL . COLON JNZ byte_16
    (126) statement -> LABEL . COLON JNZ LABEL
    (129) statement -> LABEL . COLON JP byte_16
    (130) statement -> LABEL . COLON JP LABEL
    (133) statement -> LABEL . COLON JM byte_16
    (134) statement -> LABEL . COLON JM LABEL
    (137) statement -> LABEL . COLON JPE byte_16
    (138) statement -> LABEL . COLON JPE LABEL
    (141) statement -> LABEL . COLON JPO byte_16
    (142) statement -> LABEL . COLON JPO LABEL
    (145) statement -> LABEL . COLON CALL byte_16
    (146) statement -> LABEL . COLON CALL LABEL
    (148) statement -> LABEL . COLON RET
    (150) statement -> LABEL . COLON MACHINE

    COLON           shift and go to state 66


state 5

    (9) statement -> MVI . register COMMA byte_8
    (10) statement -> MVI . memory COMMA byte_8
    (151) register -> . A
    (152) register -> . B
    (153) register -> . C
    (154) register -> . D
    (155) register -> . E
    (156) register -> . H
    (157) register -> . L
    (158) memory -> . M
